Mise à jour boot.sh & add screen.conf