@@ -1,8 +1,8 @@
 #!/bin/bash
 
-SCREEN="survie" 
-NAME="Survie"
-COMMAND="java -Xms1G -Xmx15G -jar spigot.jar"
+SCREEN="build"
+NAME="Build"
+COMMAND="java -Xmx4G -Xms256M -XX:+UseConcMarkSweepGC -XX:+IgnoreUnrecognizedVMOptions -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=1 -XX:+AggressiveOpts -XX:MaxPermSize=128M -DPaper.IgnoreJavaVersion=true -jar server.jar"
 
 running(){
  if ! screen -list | grep -q "$SCREEN"
@@ -20,7 +20,8 @@ case "$1" in
 echo "Error : Le serveur $NAME est déja démarré !"
   else
 echo "Success : Démarrage du serveur $NAME !"
-   screen -dmS $SCREEN $COMMAND
+   rm logs/screen.log
+   screen -dmS $SCREEN -L -c screen.conf $COMMAND
   fi
   ;;
  status)
@@ -32,10 +33,24 @@ echo "Not running"
     fi
   ;;
  screen)
-   screen -r $SCREEN
+   screen -x $SCREEN
  ;;
  reload)
    screen -S $SCREEN -p 0 -X stuff `printf "reload\r"`
+ ;;
+ irestart)
+  if ( running )
+  then
+   	screen -S $SCREEN  -X stuff "kick @a Le serveur redémare^M"
+   	sleep 1
+   	screen -S $SCREEN  -X stuff "stop^M"
+   	echo "Success : Arret du serveur [$NAME] !"
+   	echo "Success : Démarrage du serveur $NAME !"
+   	rm logs/screen.log
+   	screen -dmS $SCREEN -L -c screen.conf $COMMAND
+  else
+   echo "Error : Le serveur $NAME n'est pas en ligne !"
+  fi
  ;;
  stop)
   if ( running )
@@ -49,25 +64,25 @@ echo "Error : Le serveur $NAME n'est pas en ligne !"
  restart)
   if ( running )
   then
-	screen -S $SCREEN  -X stuff "say Redémarrage du serveur dans 1 minute !^M"  
+	screen -S $SCREEN  -X stuff "say Redémarrage du serveur dans 1 minute !^M"
 	sleep 55
-	screen -S $SCREEN  -X stuff "say Redémarrage dans 5 secondes !^M"  
+	screen -S $SCREEN  -X stuff "say Redémarrage dans 5 secondes !^M"
 	sleep 1
-	screen -S $SCREEN  -X stuff "say Redémarrage dans 4 secondes !^M"  
+	screen -S $SCREEN  -X stuff "say Redémarrage dans 4 secondes !^M"
 	sleep 1
-	screen -S $SCREEN  -X stuff "say Redémarrage dans 3 secondes !^M"  
+	screen -S $SCREEN  -X stuff "say Redémarrage dans 3 secondes !^M"
 	sleep 1
-	screen -S $SCREEN  -X stuff "say Redémarrage dans 2 secondes !^M"  
+	screen -S $SCREEN  -X stuff "say Redémarrage dans 2 secondes !^M"
 	sleep 1
-	screen -S $SCREEN  -X stuff "say Redémarrage dans 1 seconde !^M"  
+	screen -S $SCREEN  -X stuff "say Redémarrage dans 1 seconde !^M"
 	sleep 1
 	screen -S $SCREEN  -X stuff "kick @a Le serveur redémare^M"
 	sleep 1
 	screen -S $SCREEN  -X stuff "stop^M"
 	echo "Success : Arret du serveur [$NAME] !"
-	sleep 2
 	echo "Success : Démarrage du serveur $NAME !"
-	screen -dmS $SCREEN $COMMAND
+	rm logs/screen.log
+	screen -dmS $SCREEN -L -c screen.conf $COMMAND
   else
 echo "Error : Le serveur $NAME n'est pas démarré !"
   fi
